# A-DS_VK2023

./: 1task.cpp  2task.cpp  3task.cpp  4task.cpp  5task.cpp  6task.cpp  7task.cpp  BTree.cpp  BinaryTree.cpp  CMakeLists.txt  HashTable.cpp  OutBitStream.cpp  README.md  RK_1.cpp  RK_2.cpp  RK_3.cpp  Seminar1.cpp  Seminar2.cpp  Seminar3.cpp
1task/: ArcGraph.cpp  ArcGraph.hpp  CMakeLists.txt  ListGraph.cpp  ListGraph.hpp  MatrixGraph.cpp  MatrixGraph.hpp  SetGraph.cpp  SetGraph.hpp  main.cpp
