cmake_minimum_required(VERSION 3.16)
set(CMAKE_CXX_STANDARD 17)

project(1task)
add_executable(1task 1task.cpp)

project(2task)
add_executable(2task 2task.cpp)

project(3task)
add_executable(3task 3task.cpp)

project(4task)
add_executable(4task 4task.cpp)

project(5task)
add_executable(5task 5task.cpp)

project(6task)
add_executable(6task 6task.cpp)

project(7task)
add_executable(7task 7task.cpp)

project(RK_1)
add_executable(RK_1 RK_1.cpp)

project(RK_2)
add_executable(RK_2 RK_2.cpp)

project(RK_3)
add_executable(RK_3 RK_3.cpp)
